@@ -14,7 +14,6 @@ import com.sap.cds.services.runtime.CdsRuntime;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.concurrent.TimeUnit;
 import org.json.JSONArray;
 import org.json.JSONObject;
 import org.junit.jupiter.api.Test;
@@ -22,12 +21,19 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.security.test.context.support.WithMockUser;
+import org.springframework.test.context.DynamicPropertyRegistry;
+import org.springframework.test.context.DynamicPropertySource;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
 
 @AutoConfigureMockMvc
 @SpringBootTest
 public class SchedulingProviderOutboxCancelTest {
+
+  @DynamicPropertySource
+  static void overrideProps(DynamicPropertyRegistry registry) {
+    registry.add("cds.persistence.schema", () -> "OUTBOX_PROVIDER_CANCEL");
+  }
 
   @Autowired
   private MockMvc mockMvc;
@@ -67,7 +73,7 @@ public class SchedulingProviderOutboxCancelTest {
       JSONObject json = new JSONObject(response);
       ID = json.getString("ID");
 
-      setup.awaitCompleted(5, TimeUnit.SECONDS);
+      setup.awaitCompleted();
 
       mockMvc
         .perform(get("/api/job-scheduling/v1/Job/" + ID))
@@ -84,14 +90,14 @@ public class SchedulingProviderOutboxCancelTest {
         .andExpect(status().isOk())
         .andExpect(jsonPath("$.status").value("cancelRequested"));
 
-      List<JSONObject> messageEvents = setup.awaitCompleted(5, TimeUnit.SECONDS);
+      List<JSONObject> messageEvents = setup.awaitCompleted();
 
       mockMvc
         .perform(get("/api/job-scheduling/v1/Job/" + ID))
         .andExpect(status().isOk())
         .andExpect(jsonPath("$.status").value("canceled"));
 
-      JSONObject processingEvent = messageEvents.get(0);
+      JSONObject processingEvent = messageEvents.getFirst();
       assertEquals("sapafcsdk.scheduling.ProcessingService", processingEvent.get("event"));
       assertEquals("cancelJob", processingEvent.getJSONObject("message").get("event"));
       assertEquals(ID, processingEvent.getJSONObject("message").getJSONObject("params").get("ID"));
